--- a/src/package.json
+++ b/src/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "express": "^4.18.2",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "cors": "^2.8.5"
   }
 }
